--- a/pythonanywhere/templates/admin.html
+++ b/pythonanywhere/templates/admin.html
@@ -312,6 +312,7 @@
             <a class="db" href="/database">Database editor</a>
             <a class="db" href="/admin-utm-tracking">UTM Tracking</a>
             <a class="db" href="/mutations_page">DB Logs</a>
+            <a class="db" href="/checks_page">Supermode</a>
             <button id="scan-updates">Scan for updates</button>
             <div id="update-status"></div>
             <button id="run-update">Run updates</button>
