--- a/pythonanywhere/templates/checks.html
+++ b/pythonanywhere/templates/checks.html
@@ -125,11 +125,38 @@
       flex: 0 0 auto;
       margin-top: auto;
     }
+    /* Back Button */
+    .back-button {
+        position: absolute;
+        top: 20px;
+        left: 20px;
+        width: 50px;
+        height: 50px;
+        background-color: #6a6a6ad5;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: #e0e0e0;
+        text-decoration: none;
+        font-size: 24px;
+        font-weight: bold;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+        transition: background-color 0.3s, transform 0.2s;
+    }
+
+    .back-button:hover {
+        background-color: #5a5a5a;
+        transform: scale(1.1);
+    }
   </style>
 </head>
 <script src="/static/custom-alert.js"></script>
 <script src="static/admin.js"></script>
 <body>
+  <header>
+      <a href="/admin_page" class="back-button" aria-label="Go back to web app">←</a>
+    </header>
   <h1>Supermode</h1>
   <table id="settingsTable">
     <thead>
