Refactor error handling and update user suspension response; modify HTML titles and structure for consistency; enhance home page layout and navigation; streamline todo page header styles.

--- a/pythonanywhere/templates/todo.html
+++ b/pythonanywhere/templates/todo.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#2c2c2c" />
-  <title>Future Notes</title>
+  <title>Future Notes - Todo</title>
   <link rel="apple-touch-icon" sizes="180x180" href="static/apple-touch-icon.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="static/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="static/favicon-16x16.png" />
@@ -20,12 +20,12 @@
     }
 
     header {
-        background-color: var(--hdr-color);
-        padding: 20px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+      background-color: var(--hdr-color);
+      padding: 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     }
 
     .desktop-nav {
@@ -326,7 +326,7 @@
     </nav>
     
     <div id="profile-pic" class="profile-pic no-picture"></div>
-  </header>
+</header>
   
   <!-- Mobile Sub-Header -->
   <nav id="mobileSubHeader" class="mobile-sub-header">
