--- a/pythonanywhere/templates/account.html
+++ b/pythonanywhere/templates/account.html
@@ -483,6 +483,7 @@
                     <option value="/index">Personal notes</option>
                     <option value="/group-notes">Group notes</option>
                     <option value="/scheduler-page">Scheduler</option>
+                    <option value="/todo_page">Todo</option>
                     <option value="/pws">Zeeslag (Battleship)</option>
                 </select>
                 <!--Removed the button to set the default startpage, as it is now set automatically -->
