--- a/pythonanywhere/templates/scheduler.html
+++ b/pythonanywhere/templates/scheduler.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#2c2c2c" />
-  <title>Future Notes</title>
+  <title>Future Notes - Scheduler</title>
   <link rel="apple-touch-icon" sizes="180x180" href="static/apple-touch-icon.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="static/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="static/favicon-16x16.png" />
@@ -1096,6 +1096,7 @@
       <a href="/index" class="nav-link">Personal notes</a>
       <a href="/group-notes" class="nav-link">Group notes</a>
       <a href="/scheduler-page" class="nav-link active">Calendar</a>
+      <a href="/todo_page" class="nav-link">Todo</a>
     </nav>
     
     <div id="profile-pic" class="profile-pic no-picture"></div>
@@ -1106,6 +1107,7 @@
     <a href="/index" class="nav-link">Personal notes</a>
     <a href="/group-notes" class="nav-link">Group notes</a>
     <a href="/scheduler-page" class="nav-link active">Calendar</a>
+    <a href="/todo_page" class="nav-link">Todo</a>
   </nav>  
 
   <div id="overlay"></div>
