feat: implement notification system with model, fetching, and UI integration

--- a/pythonanywhere/templates/todo.html
+++ b/pythonanywhere/templates/todo.html
@@ -582,6 +582,9 @@
       </form>
     </div>
   </div>
+
+<script src="/static/js/notifications.js"></script>
+
 <script>
 // ======== Authentication & Existing Logic =========
     // globaly define sessionKey
