--- a/pythonanywhere/templates/index.html
+++ b/pythonanywhere/templates/index.html
@@ -145,6 +145,7 @@
         .desktop-nav {
         display: flex;
         gap: 20px;
+        margin: 0 auto;
         }
 
         /* Toggle Button styles */
@@ -639,6 +640,7 @@
 
     <script src="/static/admin.js"></script>
     <script src="/static/custom-alert.js"></script>
+    <script src="/static/js/notifications.js"></script>
 
     <style>
         :root {
