--- a/pythonanywhere/templates/scheduler.html
+++ b/pythonanywhere/templates/scheduler.html
@@ -1065,6 +1065,7 @@
 
   <script src="/static/admin.js"></script>
   <script src="/static/custom-alert.js"></script>
+  <script src="/static/js/notifications.js"></script>
 
   <style>
     :root {
