--- a/pythonanywhere/templates/todo.html
+++ b/pythonanywhere/templates/todo.html
@@ -470,6 +470,8 @@
 
   </style>
   <script src="static/admin.js"></script>
+  <script src="/static/js/notifications.js"></script>
+  <script src="/static/custom-alert.js"></script>
 
       <style>
         :root {
@@ -582,8 +584,6 @@
       </form>
     </div>
   </div>
-
-<script src="/static/js/notifications.js"></script>
 
 <script>
 // ======== Authentication & Existing Logic =========
