--- a/pythonanywhere/templates/group_index.html
+++ b/pythonanywhere/templates/group_index.html
@@ -1858,6 +1858,7 @@
                     uuidInput.value = groupId;
                     await joinGroup();
                     await sendInviteResult(groupId, "accepted");
+                    location.reload(); // Reload to show the new group
                 });
 
                 // Decline handler
